# PokemonBattleArena

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: auto-assign.yml
backend/: .env.example  .gitignore  CMakeLists.txt  run.sh
backend/include/database/: database_manager.hpp  db_config.hpp
backend/include/models/: user.hpp
backend/include/utils/: env.hpp
backend/lib/: libcrypto.3.dylib  libssl.3.dylib
backend/src/: connection  connection.cpp
backend/src/database/: database_manager.cpp
src/: App.tsx
src/api/: postRequests.ts
src/components/GridPokemon/: GridPokemon.tsx
src/components/Header/: Header.css  Header.tsx
src/components/PokemonCard/: PokemonCard.css  PokemonCard.tsx
src/pages/Game/: Game.css  Game.tsx
src/pages/Home/: Home.css  Home.tsx
src/pages/PokemonStats/: PokemonStats.css  PokemonStats.tsx
src/pages/Recover/: PasswordInput.css  PasswordInput.tsx  Recover.css  Recover.tsx
src/pages/Signin/: Signin.css  Signin.tsx
src/pages/Signout/: Signout.tsx
src/pages/Signup/: Signup.css  Signup.tsx
src/styles/: global.css
